Make sorter more robust